Bug 508388 - New selection effect: weird cut off focus highlight when rename item
Summary: New selection effect: weird cut off focus highlight when rename item
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.08.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-08-17 14:39 UTC by username
Modified: 2025-09-16 09:06 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (2.93 KB, image/png)
2025-08-17 14:39 UTC, username
Details

Note You need to log in before you can comment on or make changes to this bug.
Description username 2025-08-17 14:39:16 UTC
Created attachment 184190 [details]
screenshot

SUMMARY
When rename file, there is weird cut off at the bottom

STEPS TO REPRODUCE
1. Select file
2. Press F2 to rename it

OBSERVED RESULT
Weird cut off at the bottom

EXPECTED RESULT
Focus restangle should not be cut off
Comment 1 Filip 2025-08-19 14:15:52 UTC
Can confirm. Only happens when the cursor is over the file when you press the F2 to rename it
Comment 2 Akseli Lahtinen 2025-09-02 10:08:05 UTC
Git commit 93dd0db2eeb1fc41013e87e73f7fbd1956f26cd6 by Akseli Lahtinen.
Committed on 02/09/2025 at 08:51.
Pushed by meven into branch 'master'.

KStandardItemListWidget: Clean hover effect on editRole changed

When editRole is changed, as in we start renaming an item,
we should clean up the hover effect. Otherwise
we'll have a weird glitchy look.

M  +2    -0    src/kitemviews/kstandarditemlistwidget.cpp

https://invent.kde.org/system/dolphin/-/commit/93dd0db2eeb1fc41013e87e73f7fbd1956f26cd6
Comment 3 Akseli Lahtinen 2025-09-16 09:06:15 UTC
Git commit 78f2423c8ee5cf744ede070dbf26d1caa26a6818 by Akseli Lahtinen.
Committed on 15/09/2025 at 09:13.
Pushed by akselmo into branch 'release/25.08'.

KStandardItemListWidget: Clean hover effect on editRole changed

When editRole is changed, as in we start renaming an item,
we should clean up the hover effect. Otherwise
we'll have a weird glitchy look.
(cherry picked from commit 93dd0db2eeb1fc41013e87e73f7fbd1956f26cd6)

M  +2    -0    src/kitemviews/kstandarditemlistwidget.cpp

https://invent.kde.org/system/dolphin/-/commit/78f2423c8ee5cf744ede070dbf26d1caa26a6818