KStandardItemListWidget: Clean hover effect on editRole changed

When editRole is changed, as in we start renaming an item,
we should clean up the hover effect. Otherwise
we'll have a weird glitchy look.

BUG: 508388
(cherry picked from commit 93dd0db2eeb1fc41013e87e73f7fbd1956f26cd6)